fix: add security tags to godocs
